--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,33 @@
-Flask==2.1.1
-
+anyio==4.2.0
+APScheduler==3.6.3
+blinker==1.8.2
+cachetools==4.2.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cryptography==42.0.2
+Flask==2.3.3
+future==0.18.3
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+pycparser==2.21
+pyTelegramBotAPI==4.21.0
+python-telegram-bot==13.7
+pytz==2024.1
+requests==2.32.3
+setuptools==69.1.0
+six==1.16.0
+sniffio==1.3.0
+tornado==6.4
+tzdata==2024.1
+tzlocal==5.2
+urllib3==1.26.7
+Werkzeug==3.0.0
+wheel==0.43.0
